# websocket.nvim

./: .gitignore  .luarc.json  Cargo.toml  Makefile  README.md  nvim-test-runner.json
lua/websocket/: client-lua-tests.lua  client-rust-tests.lua  client.lua  init.lua  lua-tests.lua  rust-tests.lua  server.lua
lua/websocket-nvim/: init.lua  rust.tests.lua
rust/: .gitignore  Cargo.toml  Makefile
rust/src/: client.rs  lib.rs  server.rs
rust/src/client/: ffi.rs  inbound_event.rs  mod.rs  outbound_message_replay_buffer.rs  registry.rs
rust/src/server/: client.rs  ffi.rs  inbound_event.rs  mod.rs  outbound_message_replay_buffer.rs  registry.rs
src/: lib.rs
tests/: lua-client.lua  lua.lua  rust-ffi-client.lua  rust-ffi-server.lua  rust-ffi.lua
